@@ -1,4 +1,4 @@
-Copyright (C) 2000 Nathan Ingersoll, Christopher Rosendahl and various
+Copyright (C) 2001 Nathan Ingersoll, Christopher Rosendahl and various
 contributors (see AUTHORS)
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
