@@ -34,6 +34,11 @@ void ewl_notebook_prepend_page(Ewl_Widget * w, Ewl_Widget * c,
 void ewl_notebook_insert_page(Ewl_Widget * w, Ewl_Widget * c,
 			      Ewl_Widget * l, int p);
 
+Ewl_NotebookPage *ewl_notebook_remove_first_page(Ewl_Widget * w);
+Ewl_NotebookPage *ewl_notebook_remove_last_page(Ewl_Widget * w);
+Ewl_NotebookPage *ewl_notebook_remove_page(Ewl_Widget * w, int i);
+Ewl_NotebookPage *ewl_notebook_remove_visible(Ewl_Widget * w);
+
 void ewl_notebook_set_tabs_alignment(Ewl_Widget * w, Ewl_Alignment a);
 Ewl_Alignment ewl_notebook_get_tabs_alignment(Ewl_Widget * w);
 
